--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,11 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+html,
+body {
+  @apply bg-zinc-800 rounded-xl overflow-hidden text-zinc-200;
+}
+.input {
+  @apply bg-zinc-600 rounded-lg p-2 focus:outline-none;
+}
