--- a/app/src/styles.css
+++ b/app/src/styles.css
@@ -11,3 +11,13 @@ body {
 .select {
   @apply bg-base-200 rounded-xl focus:outline-none w-full;
 }
+
+.no-scrollbar::-webkit-scrollbar {
+  display: none;
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+.no-scrollbar {
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;  /* Firefox */
+}
